Fix possible namespacing issues (#284)

--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -158,15 +158,12 @@
 .dropdown-header {
     display: block;
     padding: $dropdown-item-padding-y $dropdown-item-padding-x;
+    margin-bottom: 0;
     @include font-size($dropdown-header-font-size);
     font-weight: $dropdown-header-font-weight;
     line-height: inherit;
     color: $dropdown-header-color;
     white-space: nowrap; // as with > li > a
-
-    li & {
-        margin-bottom: 0;
-    }
 }
 
 // Dropdown non-interactive text item
