--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -14,54 +14,50 @@
     @include button-size($btn-padding-y, $btn-padding-x, $font-size-base, $btn-line-height, $btn-border-radius);
     @include box-shadow($btn-box-shadow);
     @include transition($btn-transition);
-
-    &:hover {
-        text-decoration: none;
-    }
-
-    &:focus,
-    .btn-check-input:focus ~ & {
-        text-decoration: none;
-        outline: 0;
-        // No mixin use, so feedback is always present
-        @if $enable-shadows {
-            box-shadow: $btn-box-shadow, $btn-focus-box-shadow;
-        } @else {
-            box-shadow: $btn-focus-box-shadow;
-        }
-    }
-
-    // Disabled comes first so active can restyle
-    &.disabled,
-    &:disabled,
-    .btn-check-input:disabled ~ & {
-        opacity: $btn-disabled-opacity;
-        @include box-shadow(none);
-    }
-
-    &:not(:disabled):not(.disabled) {
-        cursor: pointer;
-    }
-
-    &:not(:disabled):not(.disabled):active,
-    &:not(:disabled):not(.disabled).active,
-    .btn-check-input:not(:disabled):checked ~ &,
-    .open > & {
-        // Remove the gradient for the pressed/active state
-        background-image: none;
-        @include box-shadow($btn-active-box-shadow);
-    }
-
-    &:not(:disabled):not(.disabled):active:focus,
-    &:not(:disabled):not(.disabled).active:focus,
-    .btn-check-input:not(:disabled):checked:focus ~ &,
-    .open > &:focus {
-        @include box-shadow($btn-active-box-shadow, $btn-focus-box-shadow);
-    }
-
-    // Default color
-    @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border-color, $btn-default-focus-box-shadow-color, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border-color, $btn-default-active-color, $btn-default-active-bg, $btn-default-active-border-color);
 }
+
+.btn:hover {
+    text-decoration: none;
+}
+
+.btn:focus,
+.btn-check-input:focus ~ .btn {
+    text-decoration: none;
+    // Turn off outline due to focus box-shadow set by button-variant()
+    outline: 0;
+}
+
+// Disabled comes first so active can restyle
+.btn.disabled,
+.btn:disabled,
+.btn-check-input:disabled ~ .btn {
+    opacity: $btn-disabled-opacity;
+    @include box-shadow(none);
+}
+
+.btn:not(:disabled):not(.disabled) {
+    cursor: pointer;
+}
+
+.btn:not(:disabled):not(.disabled):active,
+.btn:not(:disabled):not(.disabled).active,
+.btn-check-input:not(:disabled):checked ~ .btn,
+.open > .btn {
+    // Remove the gradient for the pressed/active state
+    background-image: none;
+    @include box-shadow($btn-active-box-shadow);
+}
+
+.btn:not(:disabled):not(.disabled):active:focus,
+.btn:not(:disabled):not(.disabled).active:focus,
+.btn-check-input:not(:disabled):checked:focus ~ .btn,
+.open > .btn:focus {
+    @include box-shadow($btn-active-box-shadow, $btn-focus-box-shadow);
+}
+
+// Default color
+@include button-variant(".btn", $btn-default-color, $btn-default-bg, $btn-default-border-color, $btn-default-focus-box-shadow-color, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border-color, $btn-default-active-color, $btn-default-active-bg, $btn-default-active-border-color);
+
 
 // Future-proof disabling of clicks on `<a>` elements
 a.btn.disabled,
@@ -84,22 +80,16 @@ fieldset:disabled a.btn,
 // Contextual color variants
 @if (type-of($btn-themes) == "map" and length($btn-themes) != 0) {
     @each $theme, $colors in $btn-themes {
-        .btn-#{$theme} {
-            @include button-variant-control($theme, $colors);
-        }
+        @include button-variant-control(".btn-#{$theme}", $colors);
     }
 }
 
 // Outline variant - remove all backgrounds
-.btn-outline {
-    @include button-variant($btn-default-color, $btn-outline-bg, $btn-default-border-color, $btn-default-focus-box-shadow-color, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border-color, $btn-default-active-color, $btn-default-active-bg, $btn-default-active-border-color);
-}
+@include button-variant(".btn-outline", $btn-default-color, $btn-outline-bg, $btn-default-border-color, $btn-default-focus-box-shadow-color, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border-color, $btn-default-active-color, $btn-default-active-bg, $btn-default-active-border-color);
 
 @if (type-of($btn-outline-themes) == "map" and length($btn-outline-themes) != 0) {
     @each $theme, $colors in $btn-outline-themes {
-        .btn-outline-#{$theme} {
-            @include button-variant-control-outline($theme, $colors, $btn-outline-bg);
-        }
+        @include button-variant-control-outline(".btn-outline-#{$theme}", $colors, $btn-outline-bg);
     }
 }
 
